# otel-grpc-demo

./: Cargo.toml  Makefile  README.md
expreiments/: readme.md  send_metric.py
expreiments/otelcDockerFile/: Dockerfile
expreiments/py/: a.py  b.py  c.py  c1.py  c2.py  c3.py  chat1.py  chat2.py  chat3.py  chat4.py  correctRaw.py  d.py  e.py  f.py  g.py  g1.py  g2.py  g3.py  h.py  i.py  j.py  k.py  ok.py  ok1.py  printHex.py  raw.py  raw1.py  raw2.py  raw3-noprotobuf.py  send_metric.py  try1.py  try2.py  try3.py  wrong1.py  wrong2.py
inspect/: host.txt  network.txt  network1.txt  p.txt
inspect/norm/: host.txt  p.txt
services/: docker-compose.yaml  otel-collector-config.yaml
services/oldconfigs/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt
src/: main.rs
src/otel/: metrics.rs  mod.rs  resources.rs
