[package]
name = "otel-grpc-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }

# Logging and OTEL
log = "0.4.21"
simplelog = "0.12"
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-opentelemetry = "0.26"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

opentelemetry = { version = "0.25", features = ["trace"] }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"]}
opentelemetry-semantic-conventions = "0.25"
opentelemetry-http = "0.25"
opentelemetry-otlp = { version = "0.25", features = ["tonic"] }

# gRPC and HTTP
tonic = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
reqwest-middleware = "0.3"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_22"] }

# Other utilities
once_cell = "1"

[build-dependencies]
tonic-build = "0.12"